persist anchors
