# server/cmd/docs/swagger.json
@@ -32,6 +32,49 @@
                 }
             }
         },
+        "/anchors": {
+            "get": {
+                "tags": [
+                    "anchor"
+                ],
+                "summary": "GetAllAnchors",
+                "operationId": "getAllAnchors",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/response.Anchor"
+                            }
+                        }
+                    }
+                }
+            },
+            "post": {
+                "tags": [
+                    "anchor"
+                ],
+                "summary": "UpsertAnchors",
+                "operationId": "upsertAnchors",
+                "parameters": [
+                    {
+                        "description": "Anchors Request",
+                        "name": "data",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/request.AnchorsRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    }
+                }
+            }
+        },
         "/devices/position": {
             "post": {
                 "tags": [
@@ -99,6 +142,39 @@
         }
     },
     "definitions": {
+        "request.Anchor": {
+            "type": "object",
+            "required": [
+                "id",
+                "x",
+                "y"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "x": {
+                    "type": "number"
+                },
+                "y": {
+                    "type": "number"
+                }
+            }
+        },
+        "request.AnchorsRequest": {
+            "type": "object",
+            "required": [
+                "anchors"
+            ],
+            "properties": {
+                "anchors": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/request.Anchor"
+                    }
+                }
+            }
+        },
         "request.DeviceRequest": {
             "type": "object",
             "required": [
@@ -147,6 +223,25 @@
                     "type": "number"
                 },
                 "pixels": {
+                    "type": "number"
+                }
+            }
+        },
+        "response.Anchor": {
+            "type": "object",
+            "required": [
+                "id",
+                "x",
+                "y"
+            ],
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "x": {
+                    "type": "number"
+                },
+                "y": {
                     "type": "number"
                 }
             }
