# server/internal/presentation/http/server.go
@@ -21,6 +21,7 @@ func NewServer(
 	rootHandler *handler.RootHandler,
 	deviceHandler *handler.DeviceHandler,
 	scaleHandler *handler.ScaleHandler,
+	anchorHandler *handler.AnchorHandler,
 ) *Server {
 	engine := gin.New()
 	engine.Use(gin.Logger(), gin.Recovery())
@@ -37,6 +38,12 @@ func NewServer(
 	{
 		scales.POST("", scaleHandler.CreateScale)
 		scales.GET("", scaleHandler.GetScale)
+	}
+
+	anchors := engine.Group("/anchors")
+	{
+		anchors.POST("", anchorHandler.UpsertAnchors)
+		anchors.GET("", anchorHandler.GetAllAnchors)
 	}
 
 	return &Server{engine: engine}
